# xl700v-chat

./: README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
src/app/: app.py
